SERVER-53697 Fix deleting of empty directories when using directoryPerDb and enableMajorityReadConcern=false

The callback with the logic is running before the collection is removed from the catalog. Blindly attempt to delete the empty directory in this case.